registrar ingreso y stock property added to producto

--- a/bambamWP/appsettings.json
+++ b/bambamWP/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "cmtheurl": "http://localhost/bambamws/",
+  "cmappname": ""
 }
